[package]
name = "tcp_lb_rs"
version = "0.1.0"
authors = ["mutalisk <0x08@0x08.net>"]
edition = "2018"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
serde_derive = "1.0"
serde_json = "1.0"
md5 = "0.7.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
hyper = { version = "0.14.4", features = ["full"] }
lazy_static = "1.4.0"
chrono = "0.4"
url = "2.2.1"
flexi_logger = "0.17"
log = "0.4.14"


